# conductor

./: .gitignore  CHORUS_ECOSYSTEM.md  Chorus-Bridge-Conductor-Integration.md  Chorus-Bridge-Spec.md  Conductor-Spec.md  Conductor_Production_Readiness_Plan.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  generate_keys.py  pr_description.md  pyproject.toml  validator.yaml
.cfp/: CFP-001-Validator-Network-Implementation.md  CFP-001-Validator-Network.md  CFP-002-InterInstance-Protocol.md  CFP-003-Hashgraph.md  CFP-004-Implementation-Guide.md  CFP-005-Security-Model-Implementation.md  CFP-005-Security-Model.md  CFP-006-Federation-Flows.md  CFP-007-API-Spec.md  CFP-008-Code-Examples-Scaffolding.md  CFP-008-Code-Examples.md  CFP-009-ActivityPub-Bridge-Implementation.md  CFP-009-ActivityPub-Bridge.md  CFP-010-Conductor-BFT.md  CFP-011-Conductor.md  CHORUS-ECOSYSTEM-GUIDE.md  Chorus-Stage-Bridge-Integration.md
.cfp/implementations/: CFP-002-InterInstance-Protocol-Implementation.md  CFP-003-Hashgraph-Implementation.md  CFP-004-Validator-Deployment-Plan.md  CFP-006-Federation-Flows-Implementation.md  CFP-007-API-Spec-Implementation.md
docs/: Chorus-Architecture.md  Chorus-Stage-Spec.md
k8s/: configmap.yaml  namespace.yaml  service.yaml  statefulset.yaml
src/conductor/: __init__.py  __main__.py  api.py  conductor.proto  conductor.py  config.py  consensus.py  crypto.py  errors.py  (+10 more)
tests/: test_conductor.py  test_config.py  test_consensus.py  test_crypto.py  test_hashing.py  test_integration.py  test_network.py  test_storage.py  test_validator_node.py  test_vdf.py
(+2 files in other folders)
