[project]
name = "conductor"
version = "0.1.0"
description = ""
authors = [
    {name = "Hailey Welsh",email = "github@haileywelsh.me"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blake3>=1.0.0",
]

[tool.poetry]
packages = [{include = "conductor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]
