[project]
name = "conductor"
version = "0.1.0"
description = ""
authors = [
    {name = "Hailey Welsh",email = "github@haileywelsh.me"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "conductor", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
blake3 = ">=1.0.0"
pynacl = ">=1.5.0,<2.0.0"
lmdb = ">=1.4.1,<2.0.0"
pyyaml = ">=6.0,<7.0"
pydantic = ">=2.0.0,<3.0.0"
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"
cryptography = ">=41.0.0,<43.0.0"
fastapi = ">=0.104.0,<1.0.0"
uvicorn = ">=0.24.0,<1.0.0"
prometheus-client = ">=0.19.0,<1.0.0"
structlog = ">=23.0.0,<24.0.0"
opentelemetry-api = ">=1.20.0,<2.0.0"
opentelemetry-sdk = ">=1.20.0,<2.0.0"
opentelemetry-exporter-otlp = ">=1.20.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "grpcio-tools (>=1.76.0,<2.0.0)"
]
